[gd_scene load_steps=8 format=4 uid="uid://b8de1mhphnwo7"]

[ext_resource type="Script" uid="uid://cw6602lhp0d5c" path="res://Scene/AwardSettlement/AwardSettlement.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cfhw1chjsphww" path="res://Asset/Texture/GUI/AwardSettlement/AwardSettlementBackground.png" id="2"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://5h0kqgkbtnu0" path="res://Asset/Texture/GUI/AwardSettlement/Paper/ExperimentalLogNote01.png" id="4"]
[ext_resource type="PackedScene" uid="uid://bgkuthysw0876" path="res://Prefab/GUI/Button/NinePatchButtonBase/NinePatchButtonBase.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://oks7e2sbpr1o" path="res://Asset/Texture/GUI/General/General/ArrowButton.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bdx1imearld07" path="res://Asset/Texture/GUI/General/General/ArrowButtonDown.png" id="7"]

[node name="AwardSettlement" type="Node"]
script = ExtResource("1")

[node name="AwardSettlementBackground" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1

[node name="AwardShowNode" type="Control" parent="AwardSettlementBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TypeLabel" type="Label" parent="AwardSettlementBackground/AwardShowNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504
anchor_right = 0.504
offset_left = -272.32
offset_top = 72.0
offset_right = 271.68
offset_bottom = 104.0
theme_override_colors/font_color = Color(0.866667, 0.647059, 0, 1)
theme_override_constants/outline_size = 4
text = "AWARD_PACKET_PLANT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="AwardSettlementBackground/AwardShowNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 288.0
offset_right = 292.0
offset_bottom = 339.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.737769, 0.305847, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.541176)
theme_override_font_sizes/font_size = 16
text = "TOWERDEFENSE_PLANT_SUNFLOWERPEA_NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DescribeLabel" type="Label" parent="AwardSettlementBackground/AwardShowNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = 344.0
offset_right = 100.0
offset_bottom = 432.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.184314, 0.215686, 0.368627, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "TOWERDEFENSE_PLANT_SUNFLOWERPEA_EXPRESTION"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control" type="Control" parent="AwardSettlementBackground/AwardShowNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Marker" type="Control" parent="AwardSettlementBackground/AwardShowNode/Control"]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.494
anchor_top = 0.36
anchor_right = 0.494
anchor_bottom = 0.36
offset_left = 0.47998
offset_top = -1.52588e-05
offset_right = 0.47998
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2

[node name="ImageShowNode" type="Control" parent="AwardSettlementBackground"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="AwardSettlementBackground/ImageShowNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -32.0
offset_right = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageSprite" type="Sprite2D" parent="AwardSettlementBackground/ImageShowNode/Control"]
unique_name_in_owner = true
texture = ExtResource("4")

[node name="MenuButton" parent="." instance=ExtResource("5")]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.496
anchor_top = 1.0
anchor_right = 0.496
anchor_bottom = 1.0
offset_left = -87.6801
offset_top = -120.0
offset_right = 87.3199
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
text = "MAINMENU"

[node name="NextLevelButton" parent="." instance=ExtResource("5")]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.496
anchor_top = 1.0
anchor_right = 0.496
anchor_bottom = 1.0
offset_left = -87.6801
offset_top = -120.0
offset_right = 87.3199
offset_bottom = -78.0
text = "NEXTLEVEL"

[node name="MoreBackButton" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0001
offset_top = -96.0
offset_right = 125.0
offset_bottom = 2.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6")
texture_pressed = ExtResource("7")
texture_hover = ExtResource("7")
stretch_mode = 0

[connection signal="pressed" from="MenuButton" to="." method="MenuButtonPressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="NextLevelButtonPressed"]
[connection signal="pressed" from="MoreBackButton" to="." method="MenuButtonPressed"]
